# forge

./: .gitignore  .needle-predispatch-sha  ACTIVITY_MONITORING_SUMMARY.md  BEADS_VALIDATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GAPS_ANALYSIS.md  IMPLEMENTATION_SUMMARY_fg-181r.1.md  IMPLEMENTATION_SUMMARY_fg-2eq2.2.md  Makefile  PROGRESS.md  README.md  RETRY_LOGIC_IMPLEMENTATION.md  TASK_SEARCH_IMPLEMENTATION.md  bd-zbp-COMPLETE-SOLUTION.md  core.109584  core.1553700  core.1602949  core.1928061  core.1928382  core.2147551  core.2180443  core.3939110  core.603468  core.649217  core.694244  core.702966  core.78954  core.854699  onboarding-beads.md  pyinstaller.spec  pyproject.toml  refactor_db_retry.py  test-activity-monitoring.sh  test-forge-chat.sh  test-forge-server.sh  test-search-basic.sh  test-search-clear.sh  (+4 more)
.beads/: beads.db.br-backup-20260509052836  beads.db.br-backup-20260509053212  config.yaml  issues.jsonl  issues.jsonl.backup
.beads/.br_history/: issues.20260211_231942.jsonl  issues.20260213_175311.jsonl  issues.20260213_190249.jsonl  issues.20260213_190435.jsonl  issues.20260213_190623.jsonl  issues.20260213_190858.jsonl  issues.20260213_195958.jsonl  issues.20260213_215149.jsonl  issues.20260213_215153.jsonl  issues.20260213_215542.jsonl  issues.20260213_220540.jsonl  issues.20260213_221310.jsonl  issues.20260213_224933.jsonl  issues.20260214_033640.jsonl  issues.20260215_000322.jsonl  issues.20260216_095058.jsonl  issues.20260421_113252_917089768.jsonl  issues.20260421_113422_373514171.jsonl  issues.20260421_113422_392854343.jsonl  issues.20260421_113422_408930785.jsonl  issues.20260421_113422_450782421.jsonl  (+95 more)
.cargo/: config.toml
.dagger/: dagger.json  go.mod  main.go
.marathon/: instruction.md  launch-marathon.sh
crates/forge-chat/: Cargo.toml
crates/forge-chat/src/: audit.rs  backend.rs  claude_api.rs  claude_api_types.rs  config.rs  context.rs  error.rs  history.rs  lib.rs  opencode_provider.rs  provider.rs  rate_limit.rs  spawner.rs  tools.rs
crates/forge-chat/tests/: integration_tests.rs  network_error_tests.rs  provider_integration_tests.rs  rate_limit_retry_tests.rs
crates/forge-config/: Cargo.toml
crates/forge-config/src/: lib.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: activity_monitor.rs  assignment.rs  audit.rs  deps.rs  error.rs  lib.rs  logging.rs  recovery.rs  self_update.rs  session.rs  status.rs  stuck_detection.rs  types.rs  watcher.rs  worker_perf.rs  workspace.rs
crates/forge-cost/: Cargo.toml
crates/forge-cost/src/: aggregator.rs  db.rs  error.rs  lib.rs  models.rs  multi_workspace.rs  optimizer.rs  parser.rs  query.rs  subscription_tracker.rs
crates/forge-cost/tests/: integration_tests.rs
crates/forge-init/: Cargo.toml
crates/forge-init/examples/: test_wizard.rs
crates/forge-init/src/: detection.rs  generator.rs  guidance.rs  lib.rs  validator.rs  wizard.rs
crates/forge-server/: Cargo.toml
crates/forge-server/src/: assignment.rs  auth.rs  client.rs  lib.rs  protocol.rs  session.rs  websocket.rs
crates/forge-server/tests/: team_collaboration_test.rs
crates/forge-tui/: Cargo.toml  core.2212946  core.2219363  core.2219715  core.2220475  core.683534  core.690651  core.692048  core.713293  core.713347  core.713379
crates/forge-tui/src/: activity_panel.rs  alert.rs  app.rs  bead.rs  bead.rs.bak  config_error_handler.rs  config_menu.rs  config_watcher.rs  cost_panel.rs  data.rs  error_recovery.rs  event.rs  integration_tests.rs  lib.rs  log.rs  log_watcher.rs  metrics_panel.rs  perf_metrics.rs  perf_panel.rs  routing_panel.rs  sessions_panel.rs  status.rs  subscription_panel.rs  theme.rs  view.rs  widget.rs  worker_panel.rs  workspace_panel.rs
crates/forge-worker/: Cargo.toml
crates/forge-worker/src/: auto_recovery.rs  bead_queue.rs  complexity.rs  crash_recovery.rs  discovery.rs  health.rs  launcher.rs  lib.rs  lifecycle_tests.rs  memory.rs  pause.rs  response_time.rs  router.rs  scorer.rs  tmux.rs  types.rs
docs/: ARCHITECTURE.md  BEAD_LAUNCHER_PROTOCOL.md  CHAT_BACKEND_ARCHITECTURE.md  DATABASE.md  DESIGN_GAPS.md  DEVELOPER_GUIDE.md  EVENTS.md  EXTENSIBLE_WORKER_TYPES.md  HOTKEYS.md  IMPLEMENTATION_SUMMARY_bd-1xdv.md  INTEGRATION_GUIDE.md  LAUNCHER_PROTOCOL.md  LAUNCHER_TESTING.md  PROCESS_HEALTH_CHECKS.md  PROGRESS.md  TEAM_COLLABORATION.md  TOOL_CATALOG.md  UI.md  USER_GUIDE.md  WORKERS.md  activity-monitoring.md  beads-mockup-gap.md  chat-visual-artifacts.md  crash-recovery-implementation.md  log-parsing-integration-research.md  subscriptions.yaml.example
example-workers/: README.md  claude-haiku.yaml  claude-opus.yaml  claude-sonnet.yaml  gpt-4.yaml  qwen.yaml
notes/: bd-1cqif.md  bd-217dm.md  bd-24lbd.md  bd-3em3t.md  bd-3ly17.md  bd-4hxjq.md  bd-5niya-status.md  bd-5niya.md  bd-pc68m.md
research/: PRICING_RESEARCH_SUMMARY.md  README.md  binary-atomic-updates.md  comparison-matrix.csv  control-panel-config.yaml  conversational-interface.md  dashboard-design.md  dashboard-mockup-199x55.md  naming-creative-neologisms.md  naming-options.md  naming-pronounceability-analysis.md  opencode-research-findings.md  orchestrators-comparison.md  quick-reference.md
scripts/: bump-version.sh  worker-health.sh
src/: main.rs
test/: README.md  backend-test-harness.py  example-launcher-passing.sh  launcher-test-harness.py  log-format-validator.py  status-file-validator.py  test-forge-e2e.sh  test_bead_worker_adr0005.py  test_bead_worker_status.py  test_config.py  test_health_monitor.py  test_responsive_layout.py  test_worker_status_realtime.py  worker-config-validator.py
tests/: README.md  __init__.py  run-all-tests.sh  test-basic-launch.sh  test-error-handling.sh  test-forge-chat.sh  test-forge-e2e.sh  test-forge-sessions.sh  test-forge-theme.sh  test-forge-views.sh  test-forge-workers.sh  test-process-health-checks.sh  test_app.py  test_beads.py  test_chat_backend.py  test_cost_tracker.py  test_error_display.py  test_integration_e2e.py  test_launcher.py  test_log_parser.py  test_metrics.py  test_status_watcher.py  test_tool_definitions.py  test_tool_execution.py
(+294 files in other folders)
