[package]
name = "forge"
description = "Agent Orchestration Dashboard for managing AI worker agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core = { path = "crates/forge-core" }
forge-tui = { path = "crates/forge-tui" }
forge-init = { path = "crates/forge-init" }
clap.workspace = true
crossterm.workspace = true
tracing.workspace = true
dirs = "5.0"

[workspace]
resolver = "2"
members = [
    "crates/forge-core",
    "crates/forge-config",
    "crates/forge-cost",
    "crates/forge-worker",
    "crates/forge-tui",
    "crates/forge-chat",
    "crates/forge-init",
]

[workspace.package]
version = "0.1.4"
edition = "2024"
authors = ["FORGE Contributors"]
license = "MIT"
repository = "https://github.com/jedarden/forge"
rust-version = "1.88"

[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# File watching
notify = "8.0"
notify-debouncer-full = "0.5"

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
tempfile = "3.14"
wiremock = "0.6"

# Async utilities
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
