[package]
name = "forge-core"
description = "Core types, errors, and utilities for FORGE"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging/tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# Async runtime (for LogGuard Drop)
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
