[package]
name = "forge-core"
description = "Core types, errors, and utilities for FORGE"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging/tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# Random number generation (for jitter)
rand.workspace = true

# Async runtime (for LogGuard Drop and async watching)
tokio.workspace = true

# File watching
notify.workspace = true
notify-debouncer-full.workspace = true

# HTTP client (for self-update)
reqwest = { workspace = true, optional = true }

# Async utilities (for streaming downloads)
futures-util = { workspace = true, optional = true }

[features]
default = ["self-update"]
self-update = ["reqwest", "futures-util"]

[dev-dependencies]
tempfile.workspace = true
