[package]
name = "forge-init"
description = "Onboarding and initialization for FORGE"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Serialization
serde.workspace = true
serde_json = "1.0"
serde_yaml = "0.9"

# File system
dirs = "5.0"

# Process execution
which = "6.0"

# Date/time
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
