[package]
name = "forge-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Team collaboration and multi-user session support for FORGE"

[dependencies]
forge-core = { path = "../forge-core" }
forge-config = { path = "../forge-config" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = "0.26"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP server
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time
chrono = { workspace = true }

# Async utilities
futures-util = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
