[package]
name = "forge-tui"
description = "Terminal UI for FORGE"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }
ratatui.workspace = true
crossterm.workspace = true
chrono.workspace = true
tokio.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
