[package]
name = "forge-tui"
description = "Terminal UI for FORGE"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }
forge-cost = { path = "../forge-cost" }
forge-worker = { path = "../forge-worker" }
forge-chat = { path = "../forge-chat" }
ratatui.workspace = true
crossterm.workspace = true
chrono.workspace = true
tokio.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
thiserror.workspace = true
dirs = "5.0"
rand = "0.8"

[features]
default = ["self-update"]
self-update = ["forge-core/self-update"]

[dev-dependencies]
tempfile.workspace = true
