[package]
name = "forge-worker"
description = "Worker management for FORGE"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }
forge-cost = { path = "../forge-cost" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
humantime = "2.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true
